<resources>
    <string name="app_name">MCStuMeet</string>
    // Home Page
    <string name="gender_female">Female?</string>
    <string name="gender_male">Male?</string>
    <string name="gender_text">Hey! Are you...</string>
    <string name="interests_text">Are you here to date...</string>
    <string name="interests_girl">Girls?</string>
    <string name="interests_guy">Guys?</string>
    <string name="or_text">– or –</string>
    <string name="loginStuMeet">Log in to StuMeet</string>
    <string name="loginFB">Log in with Facebook</string>

    //Account creation
    <string name="signin_text">Sign in</string>
    <string name="username">Username</string>
    <string name="email">University email</string>
    <string name="password">Password</string>
    <string name="reenter_password">Reenter password</string>
    <string name="birthday">Birthday</string>
    <string name="create_account">Create account</string>
    <string name="next">Next</string>
    <string name="education_reg_profile">Education</string>
    <string name="login_text">Log in</string>
    <string name="login">Log in</string>

    //password forgotten
    <string name="forgot_pwd">Forgot password?</string>
    <string name="enter_email">Enter your email</string>
    <string name="send_new_pwd">Send new password</string>

    //Profil
    <string name ="short_description">Short description:</string>
    <string name ="interested_in">Interested in:</string>
    <string name ="education">Education:</string>
    <string name ="hobbies">Hobbies:</string>
    <string name ="languages">Languages:</string>

    //toast
    <string name ="wrong_email">Email is invalid. Please use your university email address!</string>
    <string name ="wrong_password">No match between your passwords!</string>
    <string name ="invalid_email">Invalid email address!</string>
    <string name ="low_password">Your password must contain more than 3 characters!</string>
    <string name ="username_taken">This username is already taken. Please choose another one.</string>
    <string name ="low_username">Your username must contain more than 1 characters!</string>
    <string name ="field_error">Please fill out all fields!</string>

// Search user
    <string name ="match">Search for a match</string>
    <string name ="filter">You can filter by this category:</string>
    <string name ="s_gender">Gender</string>
    <string name ="s_hobby">Hobby</string>
    <string name ="s_education">Education</string>
    <string name ="s_language">Language</string>
    <string name ="No_filter">NO FILTER</string>
    <string name ="s_search">You are looking for:</string>
    <string name ="like">Do you like this person?</string>
    <string name ="s_username">Username</string>
    <string name ="show_profil">Show Profile</string>
    <string name ="date_request">Send date request</string>

    <string-array name="education_array">
        <item>Choose your education</item>
        <item>Medien- und Kommunikationsinformatik</item>
        <item>Medizinisch-Technische Informatik</item>
        <item>Wirtschaftsinformatik</item>
        <item>Angewandte Chemie</item>
        <item>Biomedizinische Wissenschaften</item>
        <item>International Fashion Retail</item>
        <item>Textildesign/Modedesign</item>
        <item>Textiltechnologie-Textilmanagement</item>
        <item>Transportation Interior Design</item>
        <item>International Business</item>
        <item>International Management Double Degree</item>
        <item>International Operations And Logistics Management</item>
        <item>Production Management</item>
    </string-array>

    <string-array name="location_array">
        <item>Locations</item>
        <item>Cineplex Planie, Gartenstrasse 51 Reutlingen</item>
        <item>Campus Kebap, Pestalozzistrasse 7 Reutlingen</item>
        <item>Studentenbar CaRe e.V., Alteburgstrasse 150 Reutlingen</item>
        <item>Mauritius, Kaiserpassage 6 Reutlingen</item>
        <item>Mezcalitos Restaurant, Obere Waessere 1 Reutlingen</item>
        <item>Mensa Hochschule, Alteburgstrasse 150 Reutlingen</item>
        <item>ShooterStars Reutlingen, Gartenstrasse 49 Reutlingen</item>
    </string-array>

    <string name ="search">Search for username</string>
</resources>
