<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_registration_input"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.cogo.mcstumeet.RegistrationInput">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingLeft="90px"
        android:paddingRight="90px"
        android:layout_marginTop="260px">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/textStyleSignin"
            android:textStyle="bold"
            android:textSize="16pt"
            android:layout_marginBottom="65px"
            android:text="@string/Signin"/>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/usernameWrapper"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                style="@style/textStyleSignin"
                android:id="@+id/registration_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:hint="@string/username"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/emailWrapper"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                style="@style/textStyleSignin"
                android:id="@+id/registration_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:hint="@string/email"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/passwordWrapper"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:passwordToggleEnabled="true">
            <EditText
                style="@style/textStyleSignin"
                android:id="@+id/registration_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:fontFamily="sans-serif"
                android:hint="@string/password"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/passwordValidationWrapper"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:passwordToggleEnabled="true">
            <EditText
                style="@style/textStyleSignin"
                app:passwordToggleEnabled="true"
                android:id="@+id/registration_passwordValidation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:fontFamily="sans-serif"
                android:hint="@string/reenter_password"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/birthdayWrapper"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                style="@style/textStyleSignin"
                android:id="@+id/registration_birthday"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="datetime"
                android:hint="@string/birthday"/>
        </android.support.design.widget.TextInputLayout>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="230px"
            style="@style/buttonSize"
            android:background="@drawable/rounded_action_button"
            android:textColor="#FFFFFF"
            android:id="@+id/registration_button"
            android:text="@string/create_account"
            android:onClick="passData"/>

        </LinearLayout>

</RelativeLayout>
